--- a/anime-detail.html
+++ b/anime-detail.html
@@ -154,6 +154,8 @@
   <audio id="Toyoureternity-ost" loop><source src="https://www.dropbox.com/scl/fi/pb85oa1z2xbqg102rrgkt/To-Your-Eternity-Opening-Hikaru-Utada-Pink-Blood-Sub-Espa-ol-Lyrics-Romaji.mp3?rlkey=k38if490kn1hroj8f1xiw3d31&st=0bp9ge5z&raw=1" type="audio/mpeg"></audio>
   <audio id="Tsugunaisubbed-ost" loop><source src="https://www.dropbox.com/scl/fi/ws43puqypfnbhi9g3rt8j/V-deo-sin-t-tulo-Hecho-con-Clipchamp-4-mp3cut.net.mp3?rlkey=ia1z74fp7swyybdnmkxicoqlj&st=p89beigl&raw=1" type="audio/mpeg"></audio>
   <audio id="Bluelock-ost" loop><source src="https://www.dropbox.com/scl/fi/d64d6e47hsjz76dbzqjpw/Blue-Lock-OP-Full-Chaos-ga-Kiwamaru-Sub-Espa-ol-Romaji-AMV.mp3?rlkey=9wq86whqlzg7s5ppjm7ozuy1g&st=nf29qvrj&raw=1" type="audio/mpeg"></audio>
+  <audio id="Magicmaker-ost" loop><source src="https://www.dropbox.com/scl/fi/vtcdygdvrnj4xgzormyud/Magic-Maker-Isekai-Mahou-no-Tsukurikata-ending-full-Yoake-no-Uta-by-Humbreaders.mp3?rlkey=6zn9ewcnml2kc2qllbg2leaxs&st=eqc2nmbh&raw=1" type="audio/mpeg"></audio>
+  <audio id="Newsaga-ost" loop><source src="https://www.dropbox.com/scl/fi/8ezp3jfg96bx0jrc91vga/New-Saga-Ending-Her-with-KanRomEn.mp3?rlkey=pyq7sm8e5m674gzm934l3sbd0&st=0rte7ldq&raw=1" type="audio/mpeg"></audio>
   <audio id="Shinsei Kourin-ost" loop><source src="https://www.dropbox.com/scl/fi/x8m4ib42z3wkzav2iljem/Ending-Shinsei-Kourin-Dacryon.mp3?rlkey=xdatk5v3lsmpf82ydscl0i9lc&st=1h30p4qk&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
@@ -1589,7 +1591,6 @@
               { title: "Kaiju No. 8 T2 Cap 9"},
               { title: "Kaiju No. 8 T2 Cap 10"},
               { title: "Kaiju No. 8 T2 Cap 11"},
-              { title: "Kaiju No. 8 T2 Cap 12"},
             ]
           }
         ]
@@ -1968,6 +1969,56 @@
           }
         ]
       },
+      34: {
+        title: "Magic Maker: Isekai Mahou no Tsukurikata",
+        desc: "La noche de su trigésimo cumpleaños, los sueños de usar la magia de un hombre se hacen realidad tras fallecer de forma inesperada. Al despertar se encuentra convertido en Sion, un niño de otro mundo. Él y su hermana mayor, Marie, son hijos de una familia noble de clase baja que gobierna su región. Tras recibir mensajes contradictorios de su padre, Sion y Marie emprenden una aventura para descubrir la magia.",
+        cover: "magic maker.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/ibry5ccorh1dm82brsxrx/magic1.jpg?rlkey=w6ype0tfwbkytf85klaxri92t&st=1qyp5cxa&raw=1",
+            eps: [
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 1"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 2"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 3"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 4"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 5"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 6"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 7"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 8"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 9"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 10"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 11"},
+              { title: "Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 12"},
+            ]
+          }
+        ]
+      },
+      35: {
+        title: "Tsuyokute New Saga",
+        desc: "Tras una brutal guerra, el espadachín mágico Kyle derrota al Rey Demonio, pero se queda agonizante. Un cristal carmesí le envía cuatro años al pasado, a su ciudad natal, antaño destruido, donde se encuentra con vida a sus seres queridos perdidos. Armado con el conocimiento del futuro, Kyle jura evitar la tragedia que se avecina y reescribir el destino.",
+        cover: "New Saga.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/zikp7mccg3oj2b6m743x7/Tsuyokute-New-Saga-T1-Cap-4.mp4?rlkey=zevq3650vembksg9zr4czkp32&st=8aq06118&raw=1",
+            eps: [
+              { title: "Tsuyokute New Saga T1 Cap 1"},
+              { title: "Tsuyokute New Saga T1 Cap 2"},
+              { title: "Tsuyokute New Saga T1 Cap 3"},
+              { title: "Tsuyokute New Saga T1 Cap 4"},
+              { title: "Tsuyokute New Saga T1 Cap 5"},
+              { title: "Tsuyokute New Saga T1 Cap 6"},
+              { title: "Tsuyokute New Saga T1 Cap 7"},
+              { title: "Tsuyokute New Saga T1 Cap 8"},
+              { title: "Tsuyokute New Saga T1 Cap 9"},
+              { title: "Tsuyokute New Saga T1 Cap 10"},
+              { title: "Tsuyokute New Saga T1 Cap 11"},
+              { title: "Tsuyokute New Saga T1 Cap 12"},
+            ]
+          }
+        ]
+      },
       37: {
         title: "Shinsei Kourin Dacryon Luna",
         desc: "En el club de periodismo de la Escuela Privada Etoile, Runa, Reina y Miyu activan la aplicación Angel Maker, lo que desencadena una tragedia. Se convierten en chicas mágicas y luchan contra monstruos deformes, pero un día son capturadas y violadas por ellos. Erika, la chica mágica, las rescata, pero les advierte que si siguen luchando atraerán más ataques. Resulta que la aplicación ha sido maldecida por ángeles caídos. Erika lucha contra ellos, pero su corazón se corrompe.",
@@ -2048,12 +2099,12 @@
 
     // 5) Pausar todos los audios y reproducir OST al primer clic
     (function setupAudio(){
-      const audios = ['dd-ost','jj-ost','kb-music','rz-ost','mt-ost','ts-ost','st-ost','wi-ost','iz-ost','akame-ost','herox-ost','Demonslayer-ost','maou2099-ost','al-ost','ra-ost','ki-ost','gorila-ost','chainsaw-ost','heroescudo-ost','ov-ost','shi-ost','goblinslayer-ost','aliester-ost','oni-ost','kaiju8-ost','zootopia-ost','Clevatess-ost','drstone-ost','onepieceliveaction-ost','sr-ost','Toyoureternity-ost','Bluelock-ost','Shinsei Kourin-ost']
+      const audios = ['dd-ost','jj-ost','kb-music','rz-ost','mt-ost','ts-ost','st-ost','wi-ost','iz-ost','akame-ost','herox-ost','Demonslayer-ost','maou2099-ost','al-ost','ra-ost','ki-ost','gorila-ost','chainsaw-ost','heroescudo-ost','ov-ost','shi-ost','goblinslayer-ost','aliester-ost','oni-ost','kaiju8-ost','zootopia-ost','Clevatess-ost','drstone-ost','onepieceliveaction-ost','sr-ost','Toyoureternity-ost','Bluelock-ost','Magicmaker-ost','Newsaga-ost','Shinsei Kourin-ost']
         .map(id => document.getElementById(id))
         .filter(el => el);
       audios.forEach(a => { a.pause(); a.currentTime = 0; });
 
-      const playMap = {1:'dd-ost',2:'jj-ost',3:'kb-music',4:'rz-ost',5:'mt-ost',6:'ts-ost',7:'st-ost',8:'akame-ost',9:'herox-ost',10:'Demonslayer-ost',11:'maou2099-ost',12:'wi-ost',13:'iz-ost',14:'al-ost',15:'ra-ost',16:'ki-ost',17:'gorila-ost',18:'chainsaw-ost',19:'heroescudo-ost',20:'ov-ost',21:'shi-ost',22:'goblinslayer-ost',23:'aliester-ost',24:'oni-ost',25:'kaiju8-ost',26:'zootopia-ost',27:'Clevatess-ost',28:'drstone-ost',29:'onepieceliveaction-ost',30:'sr-ost',31:'Toyoureternity-ost',32:'Tsugunaisubbed-ost',33:'Bluelock-ost',37:'Shinsei Kourin-ost'};
+      const playMap = {1:'dd-ost',2:'jj-ost',3:'kb-music',4:'rz-ost',5:'mt-ost',6:'ts-ost',7:'st-ost',8:'akame-ost',9:'herox-ost',10:'Demonslayer-ost',11:'maou2099-ost',12:'wi-ost',13:'iz-ost',14:'al-ost',15:'ra-ost',16:'ki-ost',17:'gorila-ost',18:'chainsaw-ost',19:'heroescudo-ost',20:'ov-ost',21:'shi-ost',22:'goblinslayer-ost',23:'aliester-ost',24:'oni-ost',25:'kaiju8-ost',26:'zootopia-ost',27:'Clevatess-ost',28:'drstone-ost',29:'onepieceliveaction-ost',30:'sr-ost',31:'Toyoureternity-ost',32:'Tsugunaisubbed-ost',33:'Bluelock-ost',34:'Magicmaker-ost',35:'Newsaga-ost',37:'Shinsei Kourin-ost'};
       if (playMap[id]) {
         document.addEventListener('click', ()=>{
           const a = document.getElementById(playMap[id]);
