--- a/video-player.html
+++ b/video-player.html
@@ -809,20 +809,6 @@
           "10": { link:'https://www.dropbox.com/scl/fi/zmyksd8zgcuhuzvx5vrku/Cap-10-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=08hgx9esjgupjf9pyp70ay4y0&st=vjwr8wva&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T1 Cap 10' },
           "11": { link:'https://www.dropbox.com/scl/fi/5j67v7ikjbv0mk11wfnjx/Cap-11-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=pe1bqdpi9ykuh5rql3rige2cm&st=2pfuq7wy&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T1 Cap 11' },
           "12": { link:'https://www.dropbox.com/scl/fi/y0ir12tmnr2x92z304fsx/Cap-12-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=df96t8cixtvczvzle0pyyxu23&st=muw3dc0n&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T1 Cap 12' },
-        },
-        "2": {
-          "1": { link:'https://www.dropbox.com/scl/fi/fiv2247eihrew5apl7qu9/T2-Cap-1-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=mfpi5nq7992ms6fs56urmhpeb&st=gggfi4sy&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 1' },
-          "2": { link:'https://www.dropbox.com/scl/fi/4mcfklbb0ea6jv9eebcgu/T2-Cap-2-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=tt27wzcn68e4i17mjj8mkhwds&st=k3m5b64m&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 2' },
-          "3": { link:'https://www.dropbox.com/scl/fi/6g5teh707c7qaqf30vx18/T2-Cap-3-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=lfzc2l3k152n5rzybon2wyx00&st=0ujoitli&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 3' },
-          "4": { link:'https://www.dropbox.com/scl/fi/1p54i3haxxiipa4rob8d7/T2-Cap-4-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=p2x1vljnpepvvikui0wsgacj7&st=p28s4o8i&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 4' },
-          "5": { link:'https://www.dropbox.com/scl/fi/fd8z2gghd2y7cuzs05vu8/T2-Cap-5-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=it83bbnvf7w5bft1boop4987e&st=uj023brh&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 5' },
-          "6": { link:'https://www.dropbox.com/scl/fi/4iyxp3ak3k2tw8kic17jx/T2-Cap-6-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=xtgk8ftjeo56rupgv3im1mvhq&st=afekpv5a&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 6' },
-          "7": { link:'https://www.dropbox.com/scl/fi/3941pm4ury4h8uy32pzs2/T2-Cap-7-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=2slgm2g96ludmwudfic6kz0mq&st=kc1sz6vt&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 7' },
-          "8": { link:'https://www.dropbox.com/scl/fi/90e58n1aanwtcaowp9zlb/T2-Cap-8-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=i26dhb4a1rgblyvg1e7kmi51h&st=y3m6so0w&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 8' },
-          "9": { link:'https://www.dropbox.com/scl/fi/urwt2uoir4ykxk8at4n0y/T2-Cap-9-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=q4ug2eu1waazp4r2vpkopvx6f&st=z7cuyo22&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 9' },
-          "10": { link:'https://www.dropbox.com/scl/fi/spam75xphrw6y1tdn0s80/T2-Cap-10-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=bf8peymo2p94leittco7ed2w5&st=pv2112fy&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T1 Cap 10' },
-          "11": { link:'&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 11' },
-          "12": { link:'&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 12' },
         }
       },
       "15": {
@@ -840,6 +826,20 @@
           "11": { link:'https://www.dropbox.com/scl/fi/e13vgzbwqn435bo626h3n/T1-Cap-11-jidou-hanbaiki-ni-umarekawatta-ore-wa-meikyuu-wo-samayou.mp4?rlkey=tu56uqz6j7zo2at5rxwqkm625&st=qvepzfei&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T1 Cap 11' },
           "12": { link:'https://www.dropbox.com/scl/fi/g6yappi9y3yrnmwie1f3k/T1-Cap-12-jidou-hanbaiki-ni-umarekawatta-ore-wa-meikyuu-wo-samayou.mp4?rlkey=ftnjkhc42htb81oz95rn3kii7&st=4lbaeodu&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T1 Cap 12' },
           "13": { link:'https://www.dropbox.com/scl/fi/d6k7tjsg1d5cdeolkrlry/T1-Cap-13-jidou-hanbaiki-ni-umarekawatta-ore-wa-meikyuu-wo-samayou.mp4?rlkey=lwv1jbw41vctzm6ybxvmheeuk&st=15z89fmg&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T1 Cap 13' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/fiv2247eihrew5apl7qu9/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-1.mp4?rlkey=mfpi5nq7992ms6fs56urmhpeb&st=yanf15xm&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/4mcfklbb0ea6jv9eebcgu/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-2.mp4?rlkey=tt27wzcn68e4i17mjj8mkhwds&st=0e47xmnb&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/6g5teh707c7qaqf30vx18/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-3.mp4?rlkey=lfzc2l3k152n5rzybon2wyx00&st=2g38ha0q&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/1p54i3haxxiipa4rob8d7/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-4.mp4?rlkey=p2x1vljnpepvvikui0wsgacj7&st=gjgq4tbu&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/fd8z2gghd2y7cuzs05vu8/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-5.mp4?rlkey=it83bbnvf7w5bft1boop4987e&st=b80aikp6&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/4iyxp3ak3k2tw8kic17jx/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-6.mp4?rlkey=xtgk8ftjeo56rupgv3im1mvhq&st=gh126rf6&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/3941pm4ury4h8uy32pzs2/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-7.mp4?rlkey=2slgm2g96ludmwudfic6kz0mq&st=xttmwbnz&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/90e58n1aanwtcaowp9zlb/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-8.mp4?rlkey=i26dhb4a1rgblyvg1e7kmi51h&st=bwokt6ld&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/urwt2uoir4ykxk8at4n0y/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-9.mp4?rlkey=q4ug2eu1waazp4r2vpkopvx6f&st=fuhdxlue&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/spam75xphrw6y1tdn0s80/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-10.mp4?rlkey=bf8peymo2p94leittco7ed2w5&st=erpheq6a&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T1 Cap 10' },
+          "11": { link:'&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 11' },
+          "12": { link:'&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 12' },
         }
       },
       "16": {
@@ -1101,8 +1101,7 @@
           "8": { link:'https://www.dropbox.com/scl/fi/82fnydxjtmgp1ztbcki9h/Kaiju-No.-8-T2-Cap-8.mp4?rlkey=ko11c7k2adtw1yre32g7myon2&st=43s78k56&raw=1', title:'Kaiju No. 8 T2 Cap 8' },
           "9": { link:'https://www.dropbox.com/scl/fi/piqowtwom0h07mhpsz97h/Kaiju-No.-8-T2-Cap-9.mp4?rlkey=odga8ew3man1jq2chkbbm8ntd&st=3vpdr6s4&raw=1', title:'Kaiju No. 8 T2 Cap 9' },
           "10": { link:'https://www.dropbox.com/scl/fi/xi6ow83lc7s5i4inp2vfu/Kaiju-No.-8-T2-Cap-10.mp4?rlkey=n1h9lxaxg9nyytg3vgxf0uf6t&st=l4nhm5np&raw=1', title:'Kaiju No. 8 T2 Cap 10' },
-          "11": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 11' },
-          "12": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 12' },
+          "11": { link:'https://www.dropbox.com/scl/fi/vjx43l5vml2j4tkhujyh9/Kaiju-No.-8-T2-Cap-11.mp4?rlkey=vlzfo7nky2ko8rnkmvnquuf0k&st=z8h2sd05&raw=1', title:'Kaiju No. 8 T2 Cap 11' },
         }
       },
       "26": {
@@ -1342,6 +1341,38 @@
           "12": { link:'https://www.dropbox.com/scl/fi/s1jkuqqs6iym6hth5oi8i/Blue-Lock-T2-Cap-12.mp4?rlkey=ip9v8ghxwnq1pptpfpn2bniu5&st=8lvixz6j&raw=1', title:'Blue Lock T2 Cap 12' },
           "13": { link:'https://www.dropbox.com/scl/fi/wsf2vpm3kuwkzqi301ndu/Blue-Lock-T2-Cap-13.mp4?rlkey=cyo0ako2nuidqoiikxf7bsnhx&st=r2jn05k0&raw=1', title:'Blue Lock T2 Cap 13' },
           "14": { link:'https://www.dropbox.com/scl/fi/0g3i2dhfeswbp0hgo0f2i/Blue-Lock-T2-Cap-14.mp4?rlkey=6yph62dxihkqt2dm0evuwkgqz&st=c65kuwq1&raw=1', title:'Blue Lock T2 Cap 14' },
+        }
+      },
+      "34": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/sl3gtqitaodvkg2cn9a77/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-1.mp4?rlkey=uhyrew7yniz3c8ztqr2zl5kt6&st=t5gdb9lp&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/fsds0vuufsfprk2333imy/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-2.mp4?rlkey=wzh70ofzg0r5wny2h0bnsn53a&st=6fg56gcn&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/ssgrz8f0ul0fhuatc2qgw/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-3.mp4?rlkey=qaxrzizp1n4qjzq6khsqs2vlr&st=euawj076&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/lejk21noq0x2jnmgdnctu/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-4.mp4?rlkey=eh1t4n9p4iqwv4ysrdjytbx37&st=8s6acbki&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/q68v8bjwu7keqxw8n2l8y/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-5.mp4?rlkey=0pm7w3qfbn4qx71e74y2lpf01&st=64zi0hfm&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/nruwfubezfgkpfvit6yia/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-6.mp4?rlkey=g9sb7xf2p5sbxg8gqqp54pqib&st=02wracpw&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/o5wyfeti4v31zd32gmnhh/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-7.mp4?rlkey=roa4i2oifp2i63t1pbmt20tb3&st=tzfm72yc&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/weromk9g11375qnoxid6s/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-8.mp4?rlkey=be71hoi2ejh0uw0sodzx7d1qu&st=a6y3xgj0&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/i27ltf9fxvlvkve5j7k3b/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-9.mp4?rlkey=idwe4hiq2zqelvbk7kdizb84z&st=kwb9e1f2&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/3he3jo08fjdjb8yei6y5t/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-10.mp4?rlkey=1ljjyvmjg3l45z2f8k1vkcp0b&st=le911hpd&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/jye4xxu7zd6fms9wl5wu3/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-11.mp4?rlkey=zjrbf2zcf71srb35yw8he8d0i&st=arvqrz1c&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/8dv93xopu0t42m72x87ik/Magic-Maker-Isekai-Mahou-no-Tsukurikata-Cap-12.mp4?rlkey=mzgfso5vauyevpcfa02z4c7x5&st=88fsk3vs&raw=1', title:'Magic Maker: Isekai Mahou no Tsukurikata T1 Cap 12' },
+        }
+      },
+      "35": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/c95ly6ynp6dg4c9sq9oic/Tsuyokute-New-Saga-T1-Cap-1.mp4?rlkey=l0fwlg2qtwqosnmgtyug0ipdg&st=ttuiyyt8&raw=1', title:'Tsuyokute New Saga T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/mx1j1fh8rmpaexv7m87za/Tsuyokute-New-Saga-T1-Cap-2.mp4?rlkey=t02zxzu89q6cov271whlink8c&st=61t1aako&raw=1', title:'Tsuyokute New Saga T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/de37en4o6lxnoyzfjq7cy/Tsuyokute-New-Saga-T1-Cap-3.mp4?rlkey=rnsj8nk83w89vdzram9exlbp1&st=hd4e8eoz&raw=1', title:'Tsuyokute New Saga T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/zikp7mccg3oj2b6m743x7/Tsuyokute-New-Saga-T1-Cap-4.mp4?rlkey=zevq3650vembksg9zr4czkp32&st=693yaf7o&raw=1', title:'Tsuyokute New Saga T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/dzcik7t86fk2zmz79bnho/Tsuyokute-New-Saga-T1-Cap-5.mp4?rlkey=v7jog4s8z8gsc3di9dgt7zido&st=ecxwckku&raw=1', title:'Tsuyokute New Saga T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/kua8353f2xfogrm91t86x/Tsuyokute-New-Saga-T1-Cap-6.mp4?rlkey=6xzgtvuxe7cya8ub065bbwca6&st=xgleqg8g&raw=1', title:'Tsuyokute New Saga T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/alp608l0c8evtjypfnqay/Tsuyokute-New-Saga-T1-Cap-7.mp4?rlkey=eo2xu908ulb7zer9z3h8urw21&st=1d2qolro&raw=1', title:'Tsuyokute New Saga T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/m9zu8ffpjhmea4n8l7e2k/Tsuyokute-New-Saga-T1-Cap-8.mp4?rlkey=0qf8v5dgrt5jpmj142w7kref1&st=nw3f2zrh&raw=1', title:'Tsuyokute New Saga T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/u7fixhi1u75ah3jlqmyce/Tsuyokute-New-Saga-T1-Cap-9.mp4?rlkey=httfo53lg735dtc999lkfr84p&st=bh3smvlc&raw=1', title:'Tsuyokute New Saga T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/gpp70wi06x7vtt8qk2p7g/Tsuyokute-New-Saga-T1-Cap-10.mp4?rlkey=jasvv2so4s52daallrlwwtbgh&st=unzdkzkf&raw=1', title:'Tsuyokute New Saga T1 Cap 10' },
+          "11": { link:'&raw=1', title:'Tsuyokute New Saga T1 Cap 11' },
+          "12": { link:'&raw=1', title:'Tsuyokute New Saga T1 Cap 12' },
         }
       },
       "37": {
