--- a/anime-detail.html
+++ b/anime-detail.html
@@ -2001,7 +2001,7 @@
         seasons: [
           {
             num: 1,
-            cover: "https://www.dropbox.com/scl/fi/zikp7mccg3oj2b6m743x7/Tsuyokute-New-Saga-T1-Cap-4.mp4?rlkey=zevq3650vembksg9zr4czkp32&st=8aq06118&raw=1",
+            cover: "https://www.dropbox.com/scl/fi/5blxcy3s9emno9stkftzs/newsaga1.jpg?rlkey=1790xix1th127twrk97h3opyn&st=gl09uhwc&raw=1",
             eps: [
               { title: "Tsuyokute New Saga T1 Cap 1"},
               { title: "Tsuyokute New Saga T1 Cap 2"},
