--- a/video-player.html
+++ b/video-player.html
@@ -1219,6 +1219,7 @@
           "21": { link:'https://www.dropbox.com/scl/fi/rkhdgniclgoji0asog5rv/Dr.-Stone-Temporada-4-Capitulo-21.mp4?rlkey=4vhhxhyysvw305eqtsw7vabg4&st=9f1g4tgw&raw=1', title:'Dr. Stone T4 Cap 21' },
           "22": { link:'https://www.dropbox.com/scl/fi/k93166284hmrun17xugbj/Dr.-Stone-Temporada-4-Capitulo-22.mp4?rlkey=6csrd2ju9ui479a46m03efx69&st=11rcg95m&raw=1', title:'Dr. Stone T4 Cap 22' },
           "23": { link:'https://www.dropbox.com/scl/fi/m1hbeqkuora8yihrqtoz2/Dr.-Stone-Temporada-4-Capitulo-23.mp4?rlkey=yvz352646omw9ug5bvza0j1ey&st=qfsvwmrk&raw=1', title:'Dr. Stone T4 Cap 23' },
+          "24": { link:'https://www.dropbox.com/scl/fi/ocnpk72b7v32qazarsawa/Dr.-Stone-Temporada-4-Capitulo-24.mp4?rlkey=1rnnts2qkl547ivupuwulewk2&st=t68qs812&raw=1', title:'Dr. Stone T4 Cap 24' },
         }
       },
       "29": {
