--- a/video-player.html
+++ b/video-player.html
@@ -1376,6 +1376,34 @@
           "12": { link:'&raw=1', title:'Tsuyokute New Saga T1 Cap 12' },
         }
       },
+      "36": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/6wo12n29k2mu4upwiqtma/Gachiakuta-T1-Cap-1.mp4?rlkey=zc92jz89xctiqjjyp71fwrn7e&st=xp3hpky9&raw=1', title:'Gachiakuta T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/15m8q0ld94ztl1ozb2swf/Gachiakuta-T1-Cap-2.mp4?rlkey=ac9engox0l1xqyqyr7z1fk1mm&st=qixvw84t&raw=1', title:'Gachiakuta T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/dpp7jo6e9vajiaipa6jo2/Gachiakuta-T1-Cap-3.mp4?rlkey=sgw4e7pz90udgz5b5qkby48he&st=20syr1sj&raw=1', title:'Gachiakuta T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/630k2zp5bzuopfyvrmc98/Gachiakuta-T1-Cap-4.mp4?rlkey=un99a7ermok37rgm9m0f29yz9&st=i0upit0r&raw=1', title:'Gachiakuta T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/rohqhs8ar7rzp9nvsx9c3/Gachiakuta-T1-Cap-5.mp4?rlkey=69p8b1veb86nemdcnwrbt0a1b&st=hokfraty&raw=1', title:'Gachiakuta T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/hbtbjagtfhu851b9up2rc/Gachiakuta-T1-Cap-6.mp4?rlkey=lexyk3o3o0xbvzb9gnini7qm0&st=p3gaigas&raw=1', title:'Gachiakuta T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/9i0lk0h3liqkpg2wsleyw/Gachiakuta-T1-Cap-7.mp4?rlkey=0rkjotlvdjyg23wsufocwjzax&st=5abdefoh&raw=1', title:'Gachiakuta T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/vyebwb6yg53h19chnl424/Gachiakuta-T1-Cap-8.mp4?rlkey=hp57dw614lrs93o778gsg7qlf&st=f7ruiwip&raw=1', title:'Gachiakuta T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/ckhn4jivktsw0fdciy70a/Gachiakuta-T1-Cap-9.mp4?rlkey=qu6dssauslu66slda8m8ul86x&st=udho2pgu&raw=1', title:'Gachiakuta T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/91keenqu12jqw6cfh9bfj/Gachiakuta-T1-Cap-10.mp4?rlkey=v9lekxt00096k0nf2dv736mpf&st=qy9wcyyv&raw=1', title:'Gachiakuta T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/7rwwa9o60kjt926c46pbl/Gachiakuta-T1-Cap-11.mp4?rlkey=a4sm3y8qncu9ta6qss26h6mr6&st=quzjnm7r&raw=1', title:'Gachiakuta T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/vp4weqxu3jkg4ad6y82oh/Gachiakuta-T1-Cap-12.mp4?rlkey=mwqkls4c79ub2khqs5xwpmhur&st=z4p1pt1w&raw=1', title:'Gachiakuta T1 Cap 12' },
+          "13": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
+          "14": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
+          "15": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
+          "16": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
+          "17": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
+          "18": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
+          "19": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
+          "20": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
+          "21": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
+          "22": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
+          "23": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
+          "24": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
+        }
+      },
       "37": {
         "1": {
           "1": { link:'https://www.dropbox.com/scl/fi/wiu9vhmz4j83rhz6927lj/Shinsei-Kourin-Dacryon-Luna-Cap-1-Sub-Espa-ol.mp4?rlkey=cijr65vftkrtexv3b21tjdbzz&st=5sit9huw&raw=1', title:'Shinsei Kourin Dacryon Luna SUB Cap 1' },
